[tool.poetry]
name = "paystackease"
version = "2.3.0"
description = "This is a simple api wrapper that implements both asynchronous and synchronous http requests to interact with Paystack APIs."
authors = ["Peter Mbachu <doublep098@gmail.com>"]
maintainers = []
license = "MIT"
readme = "README.md"
keywords = ["paystack", "paystackease", "python", "api", "payment integration"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [{include = "paystackease"}]


[license]
text = "Copyright ©2024 Peter Mbachu"


[tool.poetry.urls]
"Homepage" = "https://github.com/cla-bit/PayStackEase"
"Source Code" = "https://github.com/cla-bit/PayStackEase"
"Documentation" = "https://paystackease.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/cla-bit/PayStackEase/issues"


[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8"
requests = "^2.31"
python-decouple = "^3.8"


[tool.poetry.group.docs.dependencies]
pdflatex = "^0.1.3"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinxawesome-theme = "^5.1.1"
sphinx-autobuild = "^2024.2.4"


[tool.poetry.group.dev.dependencies]
black = "^24.2"
pylint = "^3.1"
python-semantic-release = "^9.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
responses = "^0.25"
pytest-asyncio = "^0.23"
aioresponses = "^0.7"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--doctest-modules"


[tool.black]
target-version = ['py310', 'py311']
include = '\.pyi?$'


[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]  # version location
branch = "main"  # branch to make release of
changelog_file = "CHANGELOG.md"  # changelog file
build_command = "pip install poetry && poetry build"  # build dist


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
